--- a/fr/presidents/index.html
+++ b/fr/presidents/index.html
@@ -1,34 +1,33 @@
 <!doctype html>
-<html lang="en" data-theme="auto">
+<html lang="fr" data-theme="auto">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <title>Presidential terms — Presidency Clock</title>
+  <title>Mandats présidentiels — Presidency Clock</title>
 
   <!-- Canonical + hreflang -->
-  <link rel="canonical" href="https://presidencyclock.com/en/presidents/">
+  <link rel="canonical" href="https://presidencyclock.com/fr/presidents/">
   <link rel="alternate" hreflang="uk" href="https://presidencyclock.com/uk/presidents/">
   <link rel="alternate" hreflang="de" href="https://presidencyclock.com/de/presidents/">
   <link rel="alternate" hreflang="fr" href="https://presidencyclock.com/fr/presidents/">
   <link rel="alternate" hreflang="es" href="https://presidencyclock.com/es/presidents/">
-  <link rel="alternate" hreflang="en" href="https://presidencyclock.com/en/presidents/">
   <link rel="alternate" hreflang="x-default" href="https://presidencyclock.com/en/presidents/">
 
   <!-- SEO -->
-  <meta name="description" content="The latest 5 leaders per country: Ukraine, USA, Canada (prime ministers), Spain (prime minister), Mexico, France. Start/end of term, duration in days and ≈ years, average term.">
-  <meta property="og:url" content="https://presidencyclock.com/en/presidents/">
+  <meta name="description" content="Les 5 derniers dirigeants par pays : Ukraine, États-Unis, Canada (premiers ministres), Espagne (président du gouvernement), Mexique, France. Début/fin de mandat, durée en jours et ≈ années, moyenne.">
+  <meta property="og:url" content="https://presidencyclock.com/fr/presidents/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Presidential terms — Presidency Clock">
-  <meta property="og:description" content="Last 5 officeholders per country with term durations and averages.">
+  <meta property="og:title" content="Mandats présidentiels — Presidency Clock">
+  <meta property="og:description" content="Cinq derniers titulaires par pays avec la durée de leurs mandats et la moyenne.">
   <meta property="og:image" content="https://presidencyclock.com/og.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:site_name" content="Presidency Clock">
-  <meta property="og:locale" content="en_US">
+  <meta property="og:locale" content="fr_FR">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="https://presidencyclock.com/og.jpg">
-  <meta name="twitter:title" content="Presidential terms — Presidency Clock">
-  <meta name="twitter:description" content="Start/end of terms, days and years, average durations.">
+  <meta name="twitter:title" content="Mandats présidentiels — Presidency Clock">
+  <meta name="twitter:description" content="Début/fin, jours et années, durées moyennes des mandats.">
 
   <!-- AdSense -->
   <meta name="google-adsense-account" content="ca-pub-5023415479696725">
@@ -74,12 +73,12 @@
     h1{font-weight:800;letter-spacing:.01em;text-align:center;margin:6px 0 4px;font-size:clamp(20px,4.6vw,40px);line-height:1.06}
     .subtitle{text-align:center;opacity:.9;margin-bottom:10px;font-weight:600;font-size:clamp(12px,2.6vw,15px)}
 
-    /* Top navigation */
+    /* Menu principal */
     .topnav{display:flex;gap:.75rem;justify-content:center;flex-wrap:wrap;margin:12px auto}
     .topnav a{color:var(--accent);text-decoration:none;font-weight:700}
     .topnav a:hover{text-decoration:underline}
 
-    /* In-page anchors (countries) */
+    /* Menu d’ancrage (pays) */
     .nav{display:flex;gap:.5rem;justify-content:center;flex-wrap:wrap;margin:8px auto 12px}
     .nav a{color:var(--accent);text-decoration:none;font-weight:700}
     .nav a:hover{text-decoration:underline}
@@ -110,25 +109,25 @@
 <body>
   <!-- brand -->
   <div class="brand">
-    <a class="brand__link" href="/en/" aria-label="Presidency Clock">
+    <a class="brand__link" href="/fr/" aria-label="Presidency Clock">
       <svg class="brand__icon" viewBox="0 0 32 32" aria-hidden="true"><g fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"><circle cx="16" cy="16" r="12"></circle><path d="M16 8v8l6 4"></path></g></svg>
     </a>
     <span class="brand__text" aria-hidden="true">Presidency&nbsp;Clock</span>
   </div>
 
   <div class="wrap">
-    <!-- Unified top menu -->
-    <nav class="topnav" aria-label="Main menu">
-      <a href="/en/">Home</a>
-      <a href="/en/about/">About</a>
-      <a href="/en/presidents/">Presidential terms</a>
-      <a href="/en/digest/">Digests</a>
-      <a href="/en/privacy/">Privacy Policy</a>
-      <a href="/en/contacts/">Contacts</a>
+    <!-- Menu principal unifié -->
+    <nav class="topnav" aria-label="Menu principal">
+      <a href="/fr/">Accueil</a>
+      <a href="/fr/about/">À propos</a>
+      <a href="/fr/presidents/">Mandats présidentiels</a>
+      <a href="/fr/digest/">Synthèses</a>
+      <a href="/fr/privacy/">Confidentialité</a>
+      <a href="/fr/contacts/">Contact</a>
     </nav>
 
-    <h1>Presidential terms</h1>
-    <div class="subtitle">Latest 5 leaders per country. We show <b>start</b> and <b>end</b> of term, <b>days</b> and <b>≈ years</b>. Tables are sorted by duration (shortest first).</div>
+    <h1>Mandats présidentiels</h1>
+    <div class="subtitle">Les 5 derniers dirigeants par pays. Nous affichons la <b>date de début</b> et de <b>fin</b> de mandat, le nombre de <b>jours</b> et <b>d’années ≈</b>. Les tableaux sont triés par durée (du plus court au plus long).</div>
 
     <!-- ads top -->
     <div class="ad ad--top">
@@ -137,13 +136,13 @@
            data-ad-slot="9877072514" data-ad-format="auto" data-full-width-responsive="true"></ins>
     </div>
 
-    <!-- Countries anchor menu -->
-    <div class="nav" aria-label="Countries">
+    <!-- Menu d’ancrage des pays -->
+    <div class="nav" aria-label="Pays">
       <a href="#ua">Ukraine</a>
-      <a href="#us">USA</a>
+      <a href="#us">États-Unis</a>
       <a href="#ca">Canada</a>
-      <a href="#es">Spain</a>
-      <a href="#mx">Mexico</a>
+      <a href="#es">Espagne</a>
+      <a href="#mx">Mexique</a>
       <a href="#fr">France</a>
     </div>
 
@@ -157,9 +156,9 @@
     </div>
 
     <div class="footer">
-      <a href="/en/privacy/">Privacy Policy</a> •
-      <a href="/en/about/">About</a> •
-      <a href="/en/contacts/">Contacts</a>
+      <a href="/fr/privacy/">Confidentialité</a> •
+      <a href="/fr/about/">À propos</a> •
+      <a href="/fr/contacts/">Contact</a>
     </div>
   </div>
 
@@ -167,7 +166,7 @@
 (function(){
   "use strict";
 
-  /* ====== THEME + FAVICON ====== */
+  /* ====== THÈME + FAVICON ====== */
   function setFavicon(hex){
     const svg="<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64' fill='none' stroke='"+hex+"' stroke-width='6' stroke-linecap='round' stroke-linejoin='round'><circle cx='32' cy='32' r='24'/><path d='M32 14v18l12 8'/></svg>";
     const url='data:image/svg+xml,'+encodeURIComponent(svg);
@@ -182,34 +181,34 @@
   }
   applyTheme();
 
-  /* ====== DATA (ISO dates) ====== */
-  // If end = null — count until today (user's local time).
+  /* ====== DONNÉES (dates ISO) ====== */
+  // Si fin = null — calcul jusqu’à aujourd’hui (heure locale de l’utilisateur).
   const DATA = {
     ua: {
       title: 'Ukraine',
-      note: 'Elected presidents (acting heads excluded).',
+      note: 'Présidents élus (sans intérimaires).',
       leaders: [
-        {name:'Volodymyr Zelenskyy', start:'2019-05-20', end:null},
-        {name:'Petro Poroshenko',    start:'2014-06-07', end:'2019-05-20'},
-        {name:'Viktor Yanukovych',   start:'2010-02-25', end:'2014-02-22'},
-        {name:'Viktor Yushchenko',   start:'2005-01-23', end:'2010-02-25'},
-        {name:'Leonid Kuchma',       start:'1994-07-19', end:'2005-01-23'}
+        {name:'Volodymyr Zelensky', start:'2019-05-20', end:null},
+        {name:'Petro Porochenko',   start:'2014-06-07', end:'2019-05-20'},
+        {name:'Viktor Ianoukovytch',start:'2010-02-25', end:'2014-02-22'},
+        {name:'Viktor Iouchtchenko',start:'2005-01-23', end:'2010-02-25'},
+        {name:'Leonid Koutchma',    start:'1994-07-19', end:'2005-01-23'}
       ]
     },
     us: {
-      title: 'USA',
-      note: 'If a leader served two non-consecutive terms, we show separate rows.',
+      title: 'États-Unis',
+      note: 'Si un dirigeant a deux mandats non consécutifs, ils sont affichés sur des lignes séparées.',
       leaders: [
-        {name:'Donald Trump (2nd term)', start:'2025-01-20', end:null},
-        {name:'Joe Biden',               start:'2021-01-20', end:'2025-01-20'},
-        {name:'Donald Trump (1st term)', start:'2017-01-20', end:'2021-01-20'},
-        {name:'Barack Obama',            start:'2009-01-20', end:'2017-01-20'},
-        {name:'George W. Bush',          start:'2001-01-20', end:'2009-01-20'}
+        {name:'Donald Trump (2e mandat)', start:'2025-01-20', end:null},
+        {name:'Joe Biden',                start:'2021-01-20', end:'2025-01-20'},
+        {name:'Donald Trump (1er mandat)',start:'2017-01-20', end:'2021-01-20'},
+        {name:'Barack Obama',             start:'2009-01-20', end:'2017-01-20'},
+        {name:'George W. Bush',           start:'2001-01-20', end:'2009-01-20'}
       ]
     },
     ca: {
       title: 'Canada',
-      note: 'Prime ministers (head of government).',
+      note: 'Premiers ministres (chef du gouvernement).',
       leaders: [
         {name:'Justin Trudeau',  start:'2015-11-04', end:null},
         {name:'Stephen Harper',  start:'2006-02-06', end:'2015-11-04'},
@@ -219,30 +218,30 @@
       ]
     },
     es: {
-      title: 'Spain',
-      note: 'Prime Minister (President of the Government).',
+      title: 'Espagne',
+      note: 'Président du gouvernement (chef du gouvernement).',
       leaders: [
-        {name:'Pedro Sánchez',              start:'2018-06-02', end:null},
-        {name:'Mariano Rajoy',              start:'2011-12-21', end:'2018-06-01'},
-        {name:'José Luis Rodríguez Zapatero', start:'2004-04-17', end:'2011-12-21'},
-        {name:'José María Aznar',           start:'1996-05-05', end:'2004-04-17'},
-        {name:'Felipe González',            start:'1982-12-02', end:'1996-05-05'}
+        {name:'Pedro Sánchez',                 start:'2018-06-02', end:null},
+        {name:'Mariano Rajoy',                 start:'2011-12-21', end:'2018-06-01'},
+        {name:'José Luis Rodríguez Zapatero',  start:'2004-04-17', end:'2011-12-21'},
+        {name:'José María Aznar',              start:'1996-05-05', end:'2004-04-17'},
+        {name:'Felipe González',               start:'1982-12-02', end:'1996-05-05'}
       ]
     },
     mx: {
-      title: 'Mexico',
-      note: 'President of the Republic.',
+      title: 'Mexique',
+      note: 'Président de la République.',
       leaders: [
-        {name:'Claudia Sheinbaum',             start:'2024-10-01', end:null},
-        {name:'Andrés Manuel López Obrador',   start:'2018-12-01', end:'2024-09-30'},
-        {name:'Enrique Peña Nieto',            start:'2012-12-01', end:'2018-11-30'},
-        {name:'Felipe Calderón',               start:'2006-12-01', end:'2012-11-30'},
-        {name:'Vicente Fox',                   start:'2000-12-01', end:'2006-11-30'}
+        {name:'Claudia Sheinbaum',               start:'2024-10-01', end:null},
+        {name:'Andrés Manuel López Obrador',     start:'2018-12-01', end:'2024-09-30'},
+        {name:'Enrique Peña Nieto',              start:'2012-12-01', end:'2018-11-30'},
+        {name:'Felipe Calderón',                 start:'2006-12-01', end:'2012-11-30'},
+        {name:'Vicente Fox',                     start:'2000-12-01', end:'2006-11-30'}
       ]
     },
     fr: {
       title: 'France',
-      note: 'President of the Republic.',
+      note: 'Président de la République.',
       leaders: [
         {name:'Emmanuel Macron',   start:'2017-05-14', end:null},
         {name:'François Hollande', start:'2012-05-15', end:'2017-05-14'},
@@ -253,11 +252,11 @@
     }
   };
 
-  /* ====== UTIL ====== */
-  const fmt = (d)=>d?new Date(d).toLocaleDateString('en-US',{year:'numeric',month:'2-digit',day:'2-digit'}):'—';
+  /* ====== OUTILS ====== */
+  const fmt = (d)=>d?new Date(d).toLocaleDateString('fr-FR',{year:'numeric',month:'2-digit',day:'2-digit'}):'—';
   function diffDays(a,b){
     const A=new Date(a), B=b?new Date(b):new Date();
-    // normalize to noon to avoid TZ edge cases
+    // normaliser à midi pour éviter les décalages de fuseau
     A.setHours(12,0,0,0); B.setHours(12,0,0,0);
     return Math.max(0, Math.round((B-A)/86400000));
   }
@@ -272,11 +271,11 @@
     table.innerHTML = `
       <thead>
         <tr>
-          <th>Name</th>
-          <th>Start</th>
-          <th>End</th>
-          <th>Days</th>
-          <th>Years (≈)</th>
+          <th>Nom</th>
+          <th>Début</th>
+          <th>Fin</th>
+          <th>Jours</th>
+          <th>Années (≈)</th>
         </tr>
       </thead>
       <tbody></tbody>
@@ -293,18 +292,18 @@
       tr.innerHTML = `
         <td>${r.name}</td>
         <td>${fmt(r.start)}</td>
-        <td>${r.end?fmt(r.end):'<small>incumbent</small>'}</td>
-        <td>${r.days.toLocaleString('en-US')}</td>
+        <td>${r.end?fmt(r.end):'<small>en fonction</small>'}</td>
+        <td>${r.days.toLocaleString('fr-FR')}</td>
         <td>${r.yrs}</td>
       `;
       tb.appendChild(tr);
     });
 
-    // average term
+    // durée moyenne
     const avgDays = Math.round(rows.reduce((s,x)=>s+x.days,0)/rows.length);
     const avg = document.createElement('div');
     avg.style.margin='8px 0 2px';
-    avg.innerHTML = `<span class="avg">Average term: ${avgDays.toLocaleString('en-US')} days (~${yearsApprox(avgDays)} years)</span>`;
+    avg.innerHTML = `<span class="avg">Durée moyenne : ${avgDays.toLocaleString('fr-FR')} jours (~${yearsApprox(avgDays)} ans)</span>`;
 
     wrap.appendChild(h);
     wrap.appendChild(note);
