--- a/de/presidents/index.html
+++ b/de/presidents/index.html
@@ -1,34 +1,34 @@
 <!doctype html>
-<html lang="en" data-theme="auto">
+<html lang="de" data-theme="auto">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <title>Presidential terms — Presidency Clock</title>
+  <title>Präsidenten-Amtszeiten — Presidency Clock</title>
 
   <!-- Canonical + hreflang -->
-  <link rel="canonical" href="https://presidencyclock.com/en/presidents/">
-  <link rel="alternate" hreflang="uk" href="https://presidencyclock.com/uk/presidents/">
+  <link rel="canonical" href="https://presidencyclock.com/de/presidents/">
   <link rel="alternate" hreflang="de" href="https://presidencyclock.com/de/presidents/">
+  <link rel="alternate" hreflang="uk" href="https://presidencyclock.com/uk/presidents/">
   <link rel="alternate" hreflang="fr" href="https://presidencyclock.com/fr/presidents/">
   <link rel="alternate" hreflang="es" href="https://presidencyclock.com/es/presidents/">
   <link rel="alternate" hreflang="en" href="https://presidencyclock.com/en/presidents/">
   <link rel="alternate" hreflang="x-default" href="https://presidencyclock.com/en/presidents/">
 
   <!-- SEO -->
-  <meta name="description" content="The latest 5 leaders per country: Ukraine, USA, Canada (prime ministers), Spain (prime minister), Mexico, France. Start/end of term, duration in days and ≈ years, average term.">
-  <meta property="og:url" content="https://presidencyclock.com/en/presidents/">
+  <meta name="description" content="Die letzten 5 Staats- bzw. Regierungschefs: Ukraine, USA, Kanada (Premierminister), Spanien (Regierungspräsident), Mexiko, Frankreich. Beginn/Ende der Amtszeit, Dauer in Tagen und ≈ Jahren, Durchschnitt.">
+  <meta property="og:url" content="https://presidencyclock.com/de/presidents/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Presidential terms — Presidency Clock">
-  <meta property="og:description" content="Last 5 officeholders per country with term durations and averages.">
+  <meta property="og:title" content="Präsidenten-Amtszeiten — Presidency Clock">
+  <meta property="og:description" content="Liste der letzten 5 Amtsinhaber pro Land mit der Dauer ihrer Amtszeiten und dem Durchschnitt.">
   <meta property="og:image" content="https://presidencyclock.com/og.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:site_name" content="Presidency Clock">
-  <meta property="og:locale" content="en_US">
+  <meta property="og:locale" content="de_DE">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="https://presidencyclock.com/og.jpg">
-  <meta name="twitter:title" content="Presidential terms — Presidency Clock">
-  <meta name="twitter:description" content="Start/end of terms, days and years, average durations.">
+  <meta name="twitter:title" content="Präsidenten-Amtszeiten — Presidency Clock">
+  <meta name="twitter:description" content="Beginn/Ende der Amtszeiten, Tage und Jahre, Durchschnittswerte.">
 
   <!-- AdSense -->
   <meta name="google-adsense-account" content="ca-pub-5023415479696725">
@@ -65,21 +65,39 @@
       background-attachment:fixed,fixed,fixed;
       padding-bottom:var(--safe-bottom);
     }
-    .brand{position:fixed;left:calc(12px + var(--safe-left));top:calc(8px + var(--safe-top));z-index:20;display:flex;align-items:center;gap:.5rem}
+
+    /* Brand (fixed) — nicht über Menü */
+    .brand{
+      position: fixed;
+      left: calc(12px + var(--safe-left));
+      top: calc(8px + var(--safe-top));
+      z-index: 10;              /* unter dem Menü */
+      display: inline-flex;      /* nur so breit wie Inhalt */
+      align-items: center;
+      gap: .5rem;
+      width: auto;
+      pointer-events: none;      /* Container fängt keine Klicks ab */
+    }
+    .brand__link, .brand__text{ pointer-events: auto; } /* innen klickbar */
+
     .brand__link{display:inline-flex;align-items:center;justify-content:center;width:32px;height:32px;border-radius:8px;background:var(--surface);border:1px solid var(--line);text-decoration:none;color:var(--text);box-shadow:0 2px 10px rgba(0,0,0,.06)}
     .brand__icon{width:22px;height:22px;display:block;color:var(--text)}
     .brand__text{font-weight:800;letter-spacing:.01em;user-select:none;font-size:14px}
 
-    .wrap{max-width:1100px;margin:calc(26px + var(--safe-top)) auto 28px;padding:0 14px}
+    .wrap{max-width:1100px;margin:calc(56px + var(--safe-top)) auto 28px;padding:0 14px}
+
     h1{font-weight:800;letter-spacing:.01em;text-align:center;margin:6px 0 4px;font-size:clamp(20px,4.6vw,40px);line-height:1.06}
     .subtitle{text-align:center;opacity:.9;margin-bottom:10px;font-weight:600;font-size:clamp(12px,2.6vw,15px)}
 
-    /* Top navigation */
-    .topnav{display:flex;gap:.75rem;justify-content:center;flex-wrap:wrap;margin:12px auto}
+    /* Hauptmenü */
+    .topnav{
+      position: relative; z-index: 50;
+      display:flex;gap:.75rem;justify-content:center;flex-wrap:wrap;margin:12px auto
+    }
     .topnav a{color:var(--accent);text-decoration:none;font-weight:700}
     .topnav a:hover{text-decoration:underline}
 
-    /* In-page anchors (countries) */
+    /* Anker-Menü innerhalb der Seite */
     .nav{display:flex;gap:.5rem;justify-content:center;flex-wrap:wrap;margin:8px auto 12px}
     .nav a{color:var(--accent);text-decoration:none;font-weight:700}
     .nav a:hover{text-decoration:underline}
@@ -102,7 +120,7 @@
 
     @media (max-width:720px){
       .brand__text{display:none}
-      .wrap{margin:calc(22px + var(--safe-top)) auto 18px}
+      .wrap{margin:calc(50px + var(--safe-top)) auto 18px}
       th,td{padding:7px}
     }
   </style>
@@ -110,25 +128,25 @@
 <body>
   <!-- brand -->
   <div class="brand">
-    <a class="brand__link" href="/en/" aria-label="Presidency Clock">
+    <a class="brand__link" href="/de/" aria-label="Presidency Clock">
       <svg class="brand__icon" viewBox="0 0 32 32" aria-hidden="true"><g fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"><circle cx="16" cy="16" r="12"></circle><path d="M16 8v8l6 4"></path></g></svg>
     </a>
-    <span class="brand__text" aria-hidden="true">Presidency&nbsp;Clock</span>
+    <span class="brand__text">Presidency&nbsp;Clock</span>
   </div>
 
   <div class="wrap">
-    <!-- Unified top menu -->
-    <nav class="topnav" aria-label="Main menu">
-      <a href="/en/">Home</a>
-      <a href="/en/about/">About</a>
-      <a href="/en/presidents/">Presidential terms</a>
-      <a href="/en/digest/">Digests</a>
-      <a href="/en/privacy/">Privacy Policy</a>
-      <a href="/en/contacts/">Contacts</a>
+    <!-- Einheitliches Hauptmenü (DE) -->
+    <nav class="topnav" aria-label="Hauptmenü">
+      <a href="/de/">Startseite</a>
+      <a href="/de/about/">Über die Seite</a>
+      <a href="/de/presidents/">Präsidenten-Amtszeiten</a>
+      <a href="/de/digest/">Digest</a>
+      <a href="/de/privacy/">Datenschutz</a>
+      <a href="/de/contacts/">Kontakt</a>
     </nav>
 
-    <h1>Presidential terms</h1>
-    <div class="subtitle">Latest 5 leaders per country. We show <b>start</b> and <b>end</b> of term, <b>days</b> and <b>≈ years</b>. Tables are sorted by duration (shortest first).</div>
+    <h1>Präsidenten-Amtszeiten</h1>
+    <div class="subtitle">Letzte 5 Amtsinhaber je Land. Wir zeigen <b>Beginn</b> und <b>Ende</b> der Amtszeit, <b>Tage</b> und <b>≈ Jahre</b>. Tabellen sind nach Dauer sortiert (kürzeste zuerst).</div>
 
     <!-- ads top -->
     <div class="ad ad--top">
@@ -137,14 +155,14 @@
            data-ad-slot="9877072514" data-ad-format="auto" data-full-width-responsive="true"></ins>
     </div>
 
-    <!-- Countries anchor menu -->
-    <div class="nav" aria-label="Countries">
+    <!-- Länder-Anker -->
+    <div class="nav" aria-label="Länder">
       <a href="#ua">Ukraine</a>
       <a href="#us">USA</a>
-      <a href="#ca">Canada</a>
-      <a href="#es">Spain</a>
-      <a href="#mx">Mexico</a>
-      <a href="#fr">France</a>
+      <a href="#ca">Kanada</a>
+      <a href="#es">Spanien</a>
+      <a href="#mx">Mexiko</a>
+      <a href="#fr">Frankreich</a>
     </div>
 
     <div id="tables"></div>
@@ -157,9 +175,9 @@
     </div>
 
     <div class="footer">
-      <a href="/en/privacy/">Privacy Policy</a> •
-      <a href="/en/about/">About</a> •
-      <a href="/en/contacts/">Contacts</a>
+      <a href="/de/privacy/">Datenschutz</a> •
+      <a href="/de/about/">Über die Seite</a> •
+      <a href="/de/contacts/">Kontakt</a>
     </div>
   </div>
 
@@ -167,7 +185,7 @@
 (function(){
   "use strict";
 
-  /* ====== THEME + FAVICON ====== */
+  /* THEMA + FAVICON */
   function setFavicon(hex){
     const svg="<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64' fill='none' stroke='"+hex+"' stroke-width='6' stroke-linecap='round' stroke-linejoin='round'><circle cx='32' cy='32' r='24'/><path d='M32 14v18l12 8'/></svg>";
     const url='data:image/svg+xml,'+encodeURIComponent(svg);
@@ -182,34 +200,33 @@
   }
   applyTheme();
 
-  /* ====== DATA (ISO dates) ====== */
-  // If end = null — count until today (user's local time).
+  /* DATEN */
   const DATA = {
     ua: {
       title: 'Ukraine',
-      note: 'Elected presidents (acting heads excluded).',
+      note: 'Gewählte Präsidenten (ohne kommissarische Amtsinhaber).',
       leaders: [
-        {name:'Volodymyr Zelenskyy', start:'2019-05-20', end:null},
-        {name:'Petro Poroshenko',    start:'2014-06-07', end:'2019-05-20'},
-        {name:'Viktor Yanukovych',   start:'2010-02-25', end:'2014-02-22'},
-        {name:'Viktor Yushchenko',   start:'2005-01-23', end:'2010-02-25'},
-        {name:'Leonid Kuchma',       start:'1994-07-19', end:'2005-01-23'}
+        {name:'Wolodymyr Selenskyj', start:'2019-05-20', end:null},
+        {name:'Petro Poroschenko',   start:'2014-06-07', end:'2019-05-20'},
+        {name:'Wiktor Janukowytsch', start:'2010-02-25', end:'2014-02-22'},
+        {name:'Wiktor Juschtschenko',start:'2005-01-23', end:'2010-02-25'},
+        {name:'Leonid Kutschma',     start:'1994-07-19', end:'2005-01-23'}
       ]
     },
     us: {
       title: 'USA',
-      note: 'If a leader served two non-consecutive terms, we show separate rows.',
+      note: 'Nicht aufeinanderfolgende Amtszeiten werden getrennt dargestellt.',
       leaders: [
-        {name:'Donald Trump (2nd term)', start:'2025-01-20', end:null},
-        {name:'Joe Biden',               start:'2021-01-20', end:'2025-01-20'},
-        {name:'Donald Trump (1st term)', start:'2017-01-20', end:'2021-01-20'},
-        {name:'Barack Obama',            start:'2009-01-20', end:'2017-01-20'},
-        {name:'George W. Bush',          start:'2001-01-20', end:'2009-01-20'}
+        {name:'Donald Trump (2. Amtszeit)', start:'2025-01-20', end:null},
+        {name:'Joe Biden',                  start:'2021-01-20', end:'2025-01-20'},
+        {name:'Donald Trump (1. Amtszeit)', start:'2017-01-20', end:'2021-01-20'},
+        {name:'Barack Obama',               start:'2009-01-20', end:'2017-01-20'},
+        {name:'George W. Bush',             start:'2001-01-20', end:'2009-01-20'}
       ]
     },
     ca: {
-      title: 'Canada',
-      note: 'Prime ministers (head of government).',
+      title: 'Kanada',
+      note: 'Premierminister (Regierungschef).',
       leaders: [
         {name:'Justin Trudeau',  start:'2015-11-04', end:null},
         {name:'Stephen Harper',  start:'2006-02-06', end:'2015-11-04'},
@@ -219,30 +236,30 @@
       ]
     },
     es: {
-      title: 'Spain',
-      note: 'Prime Minister (President of the Government).',
+      title: 'Spanien',
+      note: '„Präsident der Regierung“ (Regierungschef).',
       leaders: [
-        {name:'Pedro Sánchez',              start:'2018-06-02', end:null},
-        {name:'Mariano Rajoy',              start:'2011-12-21', end:'2018-06-01'},
-        {name:'José Luis Rodríguez Zapatero', start:'2004-04-17', end:'2011-12-21'},
-        {name:'José María Aznar',           start:'1996-05-05', end:'2004-04-17'},
-        {name:'Felipe González',            start:'1982-12-02', end:'1996-05-05'}
+        {name:'Pedro Sánchez',                 start:'2018-06-02', end:null},
+        {name:'Mariano Rajoy',                 start:'2011-12-21', end:'2018-06-01'},
+        {name:'José Luis Rodríguez Zapatero',  start:'2004-04-17', end:'2011-12-21'},
+        {name:'José María Aznar',              start:'1996-05-05', end:'2004-04-17'},
+        {name:'Felipe González',               start:'1982-12-02', end:'1996-05-05'}
       ]
     },
     mx: {
-      title: 'Mexico',
-      note: 'President of the Republic.',
+      title: 'Mexiko',
+      note: 'Präsident der Republik.',
       leaders: [
-        {name:'Claudia Sheinbaum',             start:'2024-10-01', end:null},
-        {name:'Andrés Manuel López Obrador',   start:'2018-12-01', end:'2024-09-30'},
-        {name:'Enrique Peña Nieto',            start:'2012-12-01', end:'2018-11-30'},
-        {name:'Felipe Calderón',               start:'2006-12-01', end:'2012-11-30'},
-        {name:'Vicente Fox',                   start:'2000-12-01', end:'2006-11-30'}
+        {name:'Claudia Sheinbaum',                start:'2024-10-01', end:null},
+        {name:'Andrés Manuel López Obrador',      start:'2018-12-01', end:'2024-09-30'},
+        {name:'Enrique Peña Nieto',               start:'2012-12-01', end:'2018-11-30'},
+        {name:'Felipe Calderón',                  start:'2006-12-01', end:'2012-11-30'},
+        {name:'Vicente Fox',                      start:'2000-12-01', end:'2006-11-30'}
       ]
     },
     fr: {
-      title: 'France',
-      note: 'President of the Republic.',
+      title: 'Frankreich',
+      note: 'Präsident der Republik.',
       leaders: [
         {name:'Emmanuel Macron',   start:'2017-05-14', end:null},
         {name:'François Hollande', start:'2012-05-15', end:'2017-05-14'},
@@ -253,11 +270,10 @@
     }
   };
 
-  /* ====== UTIL ====== */
-  const fmt = (d)=>d?new Date(d).toLocaleDateString('en-US',{year:'numeric',month:'2-digit',day:'2-digit'}):'—';
+  /* UTIL */
+  const fmt = (d)=>d?new Date(d).toLocaleDateString('de-DE',{year:'numeric',month:'2-digit',day:'2-digit'}):'—';
   function diffDays(a,b){
     const A=new Date(a), B=b?new Date(b):new Date();
-    // normalize to noon to avoid TZ edge cases
     A.setHours(12,0,0,0); B.setHours(12,0,0,0);
     return Math.max(0, Math.round((B-A)/86400000));
   }
@@ -273,10 +289,10 @@
       <thead>
         <tr>
           <th>Name</th>
-          <th>Start</th>
-          <th>End</th>
-          <th>Days</th>
-          <th>Years (≈)</th>
+          <th>Beginn</th>
+          <th>Ende</th>
+          <th>Tage</th>
+          <th>Jahre (≈)</th>
         </tr>
       </thead>
       <tbody></tbody>
@@ -293,18 +309,17 @@
       tr.innerHTML = `
         <td>${r.name}</td>
         <td>${fmt(r.start)}</td>
-        <td>${r.end?fmt(r.end):'<small>incumbent</small>'}</td>
-        <td>${r.days.toLocaleString('en-US')}</td>
+        <td>${r.end?fmt(r.end):'<small>amtierend</small>'}</td>
+        <td>${r.days.toLocaleString('de-DE')}</td>
         <td>${r.yrs}</td>
       `;
       tb.appendChild(tr);
     });
 
-    // average term
     const avgDays = Math.round(rows.reduce((s,x)=>s+x.days,0)/rows.length);
     const avg = document.createElement('div');
     avg.style.margin='8px 0 2px';
-    avg.innerHTML = `<span class="avg">Average term: ${avgDays.toLocaleString('en-US')} days (~${yearsApprox(avgDays)} years)</span>`;
+    avg.innerHTML = `<span class="avg">Durchschnittliche Amtszeit: ${avgDays.toLocaleString('de-DE')} Tage (~${yearsApprox(avgDays)} Jahre)</span>`;
 
     wrap.appendChild(h);
     wrap.appendChild(note);
@@ -326,7 +341,7 @@
   }
   mount();
 
-  /* ====== AdSense ====== */
+  /* AdSense */
   (function(){
     const s=document.createElement('script');
     s.async=true;
