--- a/en/presidents/index.html
+++ b/en/presidents/index.html
@@ -123,7 +123,7 @@
       <a href="/en/presidents/">Presidential Terms</a>
       <a href="/en/digest/">Digests</a>
       <a href="/en/privacy/">Privacy Policy</a>
-      <a href="/en/contacts/">Contact</a>
+      <a href="/en/contact/">Contact</a>
     </nav>
 
     <h1>Presidential Terms</h1>
@@ -158,7 +158,7 @@
     <div class="footer">
       <a href="/en/privacy/">Privacy Policy</a> •
       <a href="/en/about/">About</a> •
-      <a href="/en/contacts/">Contact</a>
+      <a href="/en/contact/">Contact</a>
     </div>
   </div>
 
