--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="auto">
 <head>
   <meta charset="utf-8">
-
+<link rel="canonical" href="https://presidencyclock.com/en/contact/">
   <!-- THEME PACK: apply theme BEFORE paint + color tokens -->
   <script>
   (function(){
