--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
-<html lang="en" data-theme="auto">
-<head>
-  <meta charset="utf-8">
-<link rel="canonical" href="https://presidencyclock.com/en/contact/">
+<!doctype html><html lang="en"><head>
+<meta http-equiv="refresh" content="0; url=/en/contact/">
+<link rel="canonical" href="/en/contact/">
+<title>Redirecting…</title>
+</head><body>Redirecting to <a href="/en/contact/">/en/contact/</a></body></html>
   <!-- THEME PACK: apply theme BEFORE paint + color tokens -->
   <script>
   (function(){
